# SiAOD-3-TERM

./: .gitignore
BinaryTree/: CMakeLists.txt  main.cpp
CompressionAlgorithms/: CMakeLists.txt
CompressionAlgorithms/HuffmanCoding/: CMakeLists.txt  HuffmanCoding.cpp
CompressionAlgorithms/ShannonFanoCoding/: CMakeLists.txt  ShannonFanoCoding.cpp
Hashing/: BankAccount.cpp  BankAccount.h  CMakeLists.txt  HashTable.cpp  HashTable.h  main.cpp
SearchInText/: CMakeLists.txt
SearchInText/task1/: CMakeLists.txt  task1.cpp
SearchInText/task2/: CMakeLists.txt  HashTable.h  task2.cpp
SortingWithBitset/: CMakeLists.txt
SortingWithBitset/task1a/: CMakeLists.txt  task1a.cpp
SortingWithBitset/task1b/: CMakeLists.txt  task1b.cpp
SortingWithBitset/task1c/: CMakeLists.txt  task1c.cpp
SortingWithBitset/task2a/: CMakeLists.txt  task2a.cpp
SortingWithBitset/task2b/: CMakeLists.txt  task2b.cpp
SortingWithBitset/task2c/: CMakeLists.txt  task2c.cpp
SortingWithBitset/task3a/: CMakeLists.txt  task3a.cpp
Strategies/: CMakeLists.txt  main.cpp
YensAlgorithm/: CMakeLists.txt  main.cpp
