cmake_minimum_required(VERSION 3.22)
project(SortingWithBitset)

add_subdirectory("${PROJECT_SOURCE_DIR}/task1a")
add_subdirectory("${PROJECT_SOURCE_DIR}/task1b")
add_subdirectory("${PROJECT_SOURCE_DIR}/task1c")

add_subdirectory("${PROJECT_SOURCE_DIR}/task2a")
add_subdirectory("${PROJECT_SOURCE_DIR}/task2b")
add_subdirectory("${PROJECT_SOURCE_DIR}/task2c")

add_subdirectory("${PROJECT_SOURCE_DIR}/task3a")